syntax = "proto3";

package badies;
option go_package = "github.com/1byinf8/KeyVal/proto/badiespb";



service KeyVal {
  rpc Put (PutRequest) returns (PutResponse);
  rpc Get (GetRequest) returns (GetResponse);
  rpc Delete (DeleteRequest) returns (DeleteResponse);
  rpc UpdateKey (UpdateKeyRequest) returns (UpdateKeyResponse);
  rpc UpdateValue (UpdateValueRequest) returns (UpdateValueResponse);
}

message GetRequest {
    string key = 1;
}

message PutRequest {
    string key = 1;
    string value = 2;
}

message DeleteRequest {
    string key = 1;
}

message UpdateKeyRequest {
    string old_key = 1;
    string new_key = 2;
}

message UpdateValueRequest {
    string key = 1;
    string old_value = 2;
    string new_value = 3;
}

message GetResponse {
    string value = 1;
    bool found = 2;
}

message PutResponse {
    bool success = 1;
}

message DeleteResponse {
    bool success = 1;
}

message UpdateKeyResponse {
    bool success = 1;
}

message UpdateValueResponse {
    bool success = 1;
}